Make Alt-Svc: clear work with canonical hosts

BUG=620482

Review-Url: https://codereview.chromium.org/2069203003
Cr-Commit-Position: refs/heads/master@{#400060}

Former-commit-id: 0c49a120616a28296dd457a023b63a65be94a15b